--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -94,6 +94,26 @@
       <d-appendix>
         <d-footnote-list></d-footnote-list>
         <d-citation-list></d-citation-list>
+        <h3>Citation</h3>
+        {%- if page.citation %}
+        <div class="language-plaintext highlighter-rouge">
+          <div class="highlight">
+            <pre class="highlight"><code>{{ page.citation }}</code></pre>
+          </div>
+        </div>
+        {% else %}
+        <div class="language-plaintext highlighter-rouge">
+          <div class="highlight">
+            <pre class="highlight"><code>@online{ {{- page.title | slugify: "latin" -}} ,
+  author = { {%- for author in page.authors -%}{{ author.bibtex }}{% if forloop.last == false %} and {% endif %}{%- endfor -%} },
+  title = { {{- page.title -}} },
+  year = {{ page.date | date: '%Y' }},
+  url = { {{- site.url -}}{{- page.url -}} },
+  urldate = { {{- site.time | date: '%Y-%m-%d' -}} }
+}</code></pre>
+          </div>
+        </div>
+        {% endif %}
       </d-appendix>
 
       <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}"></d-bibliography>
