--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -40,13 +40,14 @@ layout: default
 
     <div class="clearfix">{{ content }}</div>
 
-    <!-- News 
-    {% if page.announcements and page.announcements.enabled %}
-      <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
-      </h2>
-      {% include news.liquid limit=true %}
-    {% endif %}
+    <!--
+      News
+      {% if page.announcements and page.announcements.enabled %}
+        <h2>
+          <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+        </h2>
+        {% include news.liquid limit=true %}
+      {% endif %}
     -->
 
     <!--
